--- a/Home_Page.html
+++ b/Home_Page.html
@@ -22,6 +22,7 @@
 
     <footer>
         <p>
+            <h3>Cuisine Royale</h3>
             Planning your next special event? <br> Book a table with us for an elegant and memorable experience. <br> We’re just a click away <br>
             <a href="Contact.html">Contact us</a> <br>
             or call us at 1-800-555-5555.
