--- a/Contact.html
+++ b/Contact.html
@@ -11,6 +11,7 @@
         <a href="Home_Page.html">Home</a>
         <a href="Contact.html">Contact us</a>
         <a href="Menu.html">Menu</a>
+        <a href="About.html">About</a>
     </nav>
 
     <div>
