--- a/Home_Page.html
+++ b/Home_Page.html
@@ -10,6 +10,7 @@
         <a href="Home_Page.html">Home</a>
         <a href="Contact.html">Contact us</a>
         <a href="Menu.html">Menu</a>
+        <a href="About.html">About</a>
     </nav>
      
     <div>
