Implementing About page

--- a/About.html
+++ b/About.html
@@ -6,6 +6,20 @@
     <title>Cuisine Royale</title>
 </head>
 <body>
+    <nav>
+        <a href="Home_Page.html">Home</a>
+        <a href="Contact.html">Contact us</a>
+        <a href="Menu.html">Menu</a>
+        <a href="About.html">About</a>
+    </nav>
+  
+    <div>
+
+    <h1>Welcome to Cuisine Royale</h1>
+    <p>Your ultimate dining experience awaits!</p>
+    <img src="./photo-1642231877874-ce3e205f39c0.avif" alt="Food imageS">
+    
+    </div>
     
 </body>
 </html>
