Implementing about page

--- a/About.html
+++ b/About.html
@@ -21,5 +21,22 @@
     
     </div>
     
+    <div>
+        <h2> Special Offers </h2>
+        <ul>
+            <li>Happy Hour: 20% off cocktails</li>
+            <li>Free dessert with every main course order</li>
+        </ul>
+    </div>
+
+    <div>
+        <h2>What our customer says</h2>
+        <p>
+            "The food here is amazing! I love the atmosphere and the friendly staff." – John Doe
+        </p>
+        <p>
+            "The dessert selection is heavenly. I’ll be back soon!" – Jane Smith
+        </p>
+    </div>
 </body>
 </html>
