Added footer in about page

--- a/About.html
+++ b/About.html
@@ -38,5 +38,16 @@
             "The dessert selection is heavenly. I’ll be back soon!" – Jane Smith
         </p>
     </div>
+
+    <footer>
+        <p>
+            <h3>Cuisine Royale</h3>
+            Planning your next special event? <br> Book a table with us for an elegant and memorable experience. <br> We’re just a click away <br>
+            <a href="Contact.html">Contact us</a> <br>
+            or call us at 1-800-555-5555.
+
+        </p>
+    </footer>
+    
 </body>
 </html>
