--- a/Contact.html
+++ b/Contact.html
@@ -46,13 +46,23 @@
    <button>Send Message</button>
 
    <footer>
-    <p>
-        <h3>Cuisine Royale</h3>
-        Planning your next special event? <br> Book a table with us for an elegant and memorable experience. <br>We’re just a click away <br>
-        <a href="Contact.html">Contact us</a> <br>
-        or call us at 1-800-555-5555.
+    <div>
+        <p>&copy; 2025 [Restaurant Name]. All rights reserved.</p>
+        <p>Contact Us: 123 Main Street, City, Country</p>
+        <p>Phone: (123) 456-7890</p>
+        
+        <p>Follow us on social media:</p>
+        <ul>
+            <li><a href="#">Facebook</a></li>
+            <li><a href="#">Instagram</a></li>
+            <li><a href="#">Twitter</a></li>
+            <li><a href="#">LinkedIn</a></li>
+        </ul>
+        
+        <p><a href="privacy-policy.html">Privacy Policy</a> | <a href="terms-conditions.html">Terms & Conditions</a></p>
+    </div>
+</footer>
 
-    </p>
 </footer>
 </body>
 </html>
