Updated footer content: Added social media links, contact information, and privacy policy links.

--- a/About.html
+++ b/About.html
@@ -38,10 +38,10 @@
             "The dessert selection is heavenly. I’ll be back soon!" – Jane Smith
         </p>
     </div>
-
+ <br>
     <footer>
         <div>
-            <p>&copy; 2025 [Restaurant Name]. All rights reserved.</p>
+            <p>&copy; 2025 Cuisine Royale. All rights reserved.</p>
             <p>Contact Us: 123 Main Street, City, Country</p>
             <p>Phone: (123) 456-7890</p>
             
