--- a/Contact.html
+++ b/Contact.html
@@ -44,10 +44,11 @@
    <label for="policy"> I accept privacy policy</label>
    <input type="checkbox" id="policy" name="policy">
    <button>Send Message</button>
-
+ 
+    <br>
    <footer>
     <div>
-        <p>&copy; 2025 [Restaurant Name]. All rights reserved.</p>
+        <p>&copy; 2025 Cuisine Royale. All rights reserved.</p>
         <p>Contact Us: 123 Main Street, City, Country</p>
         <p>Phone: (123) 456-7890</p>
         
